--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,13 @@ body {
     color: #000;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    background: url('https://upload.wikimedia.org/wikipedia/commons/3/3f/Fronalpstock_big.jpg'); /* bevisst: støyende bakgrunn */
+    /* background: url('https://upload.wikimedia.org/wikipedia/commons/3/3f/Fronalpstock_big.jpg'); bevisst: støyende bakgrunn */
     background-size: cover;
     background-attachment: fixed;
 }
 
 /* bevisst: semantikk-brudd – alt er div-suppe */
-/* .global-header { 
+.global-header { 
     height: 80px; 
     background: rgba(255,255,255,0.6); 
     text-align:center; 
@@ -32,24 +32,27 @@ body {
 .site-title { 
     display:inline-block; 
     font-size: 16px; 
-    color: #bdbdbd; 
+    color: #212121; 
     vertical-align: middle; 
 } */
 
 /* bevisst: meny kun på hover, liten trefflate, dårlig kontrast */
-/* .nav { 
-    background: #eaeaea; 
+/* .navmenu ul { 
+    list-style: none;
+    text-decoration: none;
+    background: #efefef; 
     height: 30px; 
     overflow: hidden; 
 }
-.nav a { 
+.navmenu ul li a { 
     color: #c0c0c0; 
     text-decoration: none; 
     padding: 5px 6px; 
     display: inline-block; 
     font-size: 11px; 
-}
-
+    list-style: none;
+} */
+/* 
 .btn { 
     display:inline-block; 
     padding: 6px 8px; 
@@ -140,15 +143,14 @@ table.layout {
 /* .shout { text-transform: uppercase; text-align:center; letter-spacing: 3px; } */
 
 /* bevisst: alt for smal linjelengde og justified */
-/* .narrow { width: 180px; text-align: justify; }
+/* .narrow { width: 180px; text-align: justify; } */
 
 footer {
     text-align: center; 
     padding: 10px; 
-    background: rgba(255,255,255,0.6);
+    background: #4d4d4d;
 }
 footer p {
-    font-size:10px; color:#bfbfbf;
-} */
-
-/* print-uvennlig */
+    font-size:10px; 
+    color:#bfbfbf;
+}
